--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,17 @@
   height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column; /* bar testing */
   align-items: center;
   justify-content: center;
+  gap: 2rem;
 }
 
 .bar {
   width: 100%;
   height: 100px;
   background: sandybrown;
+  position: relative;
 }
 
 .customer {
@@ -17,4 +20,5 @@
   height: 50px;
   border-radius: 100%;
   background: red;
+  position: absolute;
 }
