--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,10 @@
   background: red;
   position: absolute;
 }
+
+.drink {
+  width: 50px;
+  height: 50px;
+  background: lime;
+  position: absolute;
+}
