refactor: lifted state, added tap button, fully scalable by game row

--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,12 @@
   background: lime;
   position: absolute;
 }
+
+.tap {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: darkgreen;
+}
