feat: game over results screen w/ high score

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@
   justify-content: center;
   background: darkgreen;
 }
+
+.gameover {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
