--- a/src/App.css
+++ b/src/App.css
@@ -33,29 +33,42 @@
   position: relative;
   z-index: 10;
   border: 2px solid red;
+  justify-content: space-between;
+  align-items: flex-end;
   display: flex;
 }
 
-.bar-shape {
+.support {
   height: 20%;
+  width: 5px;
+  background: linear-gradient(rgb(75, 43, 10), rgb(48, 27, 4));
+  z-index: 1;
+}
+.bar-shape {
+  height: 15%;
   width: 100%;
   background: linear-gradient(rgb(179, 113, 55), rgb(48, 27, 4));
   position: absolute;
-  top: 50%;
+  top: 65%;
   border-radius: 0 5px 5px 0;
 }
 
 .customer {
   position: absolute;
   border: 2px solid yellow;
-  z-index: 0;
-  transform: translateY(-50%); /*is this right? */
+  height: 125%;
+  bottom: 0;
+}
+
+.customer img {
+  height: 100%;
 }
 
 .drink {
   width: 50px;
   height: 50px;
   position: absolute;
+  bottom: 35%;
 }
 
 .drink img {
