--- a/src/App.css
+++ b/src/App.css
@@ -146,6 +146,8 @@
 
 /*menu elements*/
 .gameover {
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
