--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   text-align: center;
 }
 
@@ -336,6 +336,21 @@ p:last-of-type {
   to {
     color: rgba(199, 210, 50, 0.8);
   }
+}
+
+button {
+  padding: 2rem 3rem;
+  min-width: 75%;
+  font-family: monospace;
+  font-size: 0.8rem;
+}
+
+.menu-buttons {
+  width: 50%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 25px;
 }
 
 /* tablet and desktop */
