--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,15 @@
   text-shadow: 2px 2px 0 black;
 }
 
+.thanks {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .sign-main {
   position: relative;
   background: url("/wood.png");
